<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/static_background_layout" />

    <include layout="@layout/static_brand_layout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d50dp"
        app:layout_constraintDimensionRatio="h,2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        app:srcCompat="@drawable/img_phone_brand" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d16dp"
        android:gravity="center"
        android:maxWidth="200dp"
        android:text="@string/introduce_app_text"
        android:textSize="@dimen/f20sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d16dp"
        android:minWidth="300dp"
        android:text="@string/login_as_visitor_text"
        android:textColor="@color/my_red_color"
        android:textSize="@dimen/f16sp"
        app:backgroundTint="@android:color/white"
        app:elevation="@dimen/d16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        app:strokeColor="@color/my_red_color" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyStyleSecoundryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_my_account"
        app:layout_constraintEnd_toEndOf="@+id/materialButton"
        app:layout_constraintStart_toStartOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
